--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: master
 publish_mode: editorial_workflow
-site_url: "https://example.com"
+site_url: "https://jamesbateson.co.uk"
 media_folder: "src/images"
 public_folder: "images"
 collections:
@@ -90,7 +90,7 @@ collections:
           - label: "Size Scale"
             name: "size-scale"
             widget: "object"
-            fields: 
+            fields:
               - {label: "Base Size", name: "base", widget: "string", default: "1rem"}
               - {label: "Ratio: 300", name: "300", widget: "string", default: "0.8rem"}
               - {label: "Ratio: 500", name: "500", widget: "string", default: "1.25rem"}
@@ -102,7 +102,7 @@ collections:
           - label: "Colors"
             name: "colors"
             widget: "object"
-            fields: 
+            fields:
               - {label: "Primary", name: "primary", widget: "string", default: "hsl(208, 57%, 21%)"}
               - {label: "Primary Shade (darker)", name: "primary-shade", widget: "string", default: "hsl(208, 56%, 14%)"}
               - {label: "Primary Glare (lighter)", name: "primary-glare", widget: "string", default: "hsl(207, 57%, 31%)"}
