--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -53,6 +53,17 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Tags", name: "tags", widget: "list", allow_add: true}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "people"
+    label: "People"
+    folder: "src/people"
+    slug: "{{slug}}"
+    preview_path: "people/{{slug}}"
+    create: true
+    fields:
+      - {label: "Name", name: "name", widget: "string"}
+      - {label: "Image", name: "image", widget: "image", required: false}
+      - {label: "Short Description", name: "shortDescription", widget: "string"}
+      - {label: "Url", name: "url", widget: "string"}
   - label: "Globals"
     name: "globals"
     files:
