--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -56,12 +56,14 @@ collections:
   - name: "people"
     label: "People"
     folder: "src/people"
+    slug: "{{slug}}"
+    preview_path: "people/{{slug}}"
     create: true
     fields:
-      - {label: "Name", name: "name", widget: "string"}
+      - {label: "Title", name: "title", widget: "string"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Short Description", name: "shortDescription", widget: "string"}
-      - {label: "Site Url", name: "site", widget: "string"}
+      - {label: "Site Url", name: "url", widget: "string"}
   - label: "Globals"
     name: "globals"
     files:
