--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -43,7 +43,22 @@ collections:
     label: "Posts"
     folder: "src/posts"
     slug: "{{slug}}"
-    preview_path: "posts/{{slug}}"
+    preview_path: "articles/{{slug}}"
+    create: true
+    fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/post.njk"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "SEO Meta Title", name: "metaTitle", widget: "string", required: false}
+      - {label: "SEO Meta Description", name: "metaDesc", widget: "string", required: false}
+      - {label: "Social Image", name: "socialImage", widget: "image", required: false}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Tags", name: "tags", widget: "list", allow_add: true}
+      - {label: "Body", name: "body", widget: "markdown"}
+  - name: "journal"
+    label: "Journal"
+    folder: "src/journal"
+    slug: "{{slug}}"
+    preview_path: "journal/{{slug}}"
     create: true
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/post.njk"}
