--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -73,7 +73,7 @@ collections:
     label: "Projects"
     folder: "src/project"
     slug: "{{slug}}"
-    preview_path: "projects/{{slug}}"
+    preview_path: "project/{{slug}}"
     create: true
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/post.njk"}
