--- a/package.json
+++ b/package.json
@@ -4,30 +4,30 @@
 	"description": "Personal website of James Bateson",
 	"main": "index.js",
 	"dependencies": {
-		"@11ty/eleventy": "^0.8.3",
+		"@11ty/eleventy": "^0.10.0",
 		"@11ty/eleventy-plugin-rss": "^1.0.6",
-		"@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
+		"@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
 		"@tbranyen/jsdom": "^13.0.0",
-		"concurrently": "^4.1.0",
+		"concurrently": "^5.2.0",
 		"html-minifier": "^4.0.0",
 		"json-to-scss": "^1.5.0",
 		"slugify": "^1.3.4",
 		"stalfos": "git://github.com/andybelldesign/stalfos.git#c8971d22726326cfc04089b2da4d51eeb1ebb0eb"
 	},
 	"devDependencies": {
-		"chokidar-cli": "^1.2.2",
-		"cross-env": "^5.2.0",
+		"chokidar-cli": "^2.1.0",
+		"cross-env": "7.0.2",
 		"make-dir-cli": "^2.0.0",
-		"prettier": "^1.18.2",
-		"rollup": "^1.16.1",
+		"prettier": "^2.0.5",
+		"rollup": "^2.7.6",
 		"rollup-plugin-commonjs": "^10.0.0",
 		"rollup-plugin-json": "^4.0.0",
 		"rollup-plugin-node-builtins": "^2.1.2",
 		"rollup-plugin-node-resolve": "^5.0.3",
 		"sass": "^1.26.5",
-		"stylelint": "^10.1.0",
+		"stylelint": "^13.3.3",
 		"stylelint-a11y": "^1.2.1",
-		"stylelint-order": "^3.0.1"
+		"stylelint-order": "^4.0.0"
 	},
 	"scripts": {
 		"sass:tokens": "npx json-to-scss src/_data/tokens.json src/scss/_tokens.scss",
