chore: added body content to resume cms controls

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -36,6 +36,7 @@ collections:
           - {label: "SEO Meta Description", name: "metaDesc", widget: "string", required: false}
           - {label: "Social Image", name: "socialImage", widget: "image", required: false}
           - {label: "Banner Summary", name: "bannerSummary", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
   - name: "generic_pages"
     label: "Generic Pages"
     folder: "src/pages"
