--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "jamesbateson.co.uk",
-	"version": "1.1.1",
+	"version": "2.0.0",
 	"description": "Personal website of James Bateson",
 	"main": "index.js",
 	"dependencies": {
 		"@11ty/eleventy": "^0.11.0",
+		"@11ty/eleventy-img": "^0.2.4",
 		"@11ty/eleventy-plugin-rss": "^1.0.6",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
 		"@tbranyen/jsdom": "^13.0.0",
