build: updated netlify config with font loading option

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   command = "npm run production"
   publish = "dist"
+
+[[plugins]]
+  package = "netlify-plugin-subfont"
+    # Inline generated CSS @font-face blocks into each page
+    # When set to `false` an external CSS file will be created
+    inlineCss = true
