build: font loading (#183)
* chore: package-lock update

* chore: remove logo from footer

* style: some more spacing tweaks

I NEED TO STOP

* chore: remove CSS sticky nav for now

I think this will be useful, but need to re-think its implementation!

* style: increase navigation font-size on mobile

Was failing tap target lighthouse

* chore: some image optimisation

* chore: manual bump of package-lock dependancy

* build: added requirements file for subfont plugin usage

* chore: some font loading strategy changes

* build: updated netlify config with font loading option

* build: netlify config tweaks

Co-authored-by: James Bateson <james@fatmedia.co.uk>

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   command = "npm run production"
   publish = "dist"
+
+[[plugins]]
+  package = "netlify-plugin-subfont"
+
+  [plugins.inputs]
+  inlineCss = false
