--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
         "@tbranyen/jsdom": "^13.0.0",
         "concurrently": "^5.3.0",
+        "dotenv": "^8.2.0",
         "html-minifier": "^4.0.0",
         "json-to-scss": "^1.6.2",
         "slugify": "^1.4.6",
