--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "main": "index.js",
     "dependencies": {
         "@11ty/eleventy": "^0.11.1",
-        "@11ty/eleventy-plugin-rss": "^1.1.0",
         "@11ty/eleventy-img": "^0.7.4",
+        "@11ty/eleventy-plugin-rss": "^1.1.0",
         "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.6",
         "@tbranyen/jsdom": "^13.0.0",
         "concurrently": "^5.3.0",
+        "dotenv": "^8.2.0",
         "html-minifier": "^4.0.0",
         "json-to-scss": "^1.6.2",
         "slugify": "^1.4.6",
@@ -19,7 +20,7 @@
         "chokidar-cli": "^2.1.0",
         "cross-env": "7.0.3",
         "fast-glob": "^3.2.4",
-        "make-dir-cli": "^2.0.0",
+        "make-dir-cli": "^1.0.0",
         "prettier": "^2.2.1",
         "rollup": "^2.36.1",
         "rollup-plugin-commonjs": "^10.0.0",
